I corrected the invisible links color.

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ h3 {
 
 a:link {
   text-decoration: none;
-  color: turquoise;
+  color: black;
 }
 
 a:hover, a:visited {
